--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,14 @@
 .app {
   text-align: center;
 }
+.logo{
+  width: 50px;
+  height: 50px;
+}
+.navbar{
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  text-align: center;
+  align-items: center;
+  margin: 35px
+}
